<?xml version="1.0"?>
<package>
  <name>robi_driver</name>
  <version>0.0.0</version>
  <description>The robi_driver package</description>

  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai Association Developer</author>
  <maintainer email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai Association Developer</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
